tests/snapshots/run_wpt_conformance__onnx_triangular_float32_4D_tensor_explict_options_upper_true.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "triangular.https.any.js",
    "triangular float32 4D tensor explict options.upper=true",
    "onnx",
    "PASS",
)
