tests/snapshots/run_wpt_conformance__onnx_triangular_float32_4D_tensor_fully_copied_options_upper_false_options_diagonal_3.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "triangular.https.any.js",
    "triangular float32 4D tensor fully copied options.upper=false options.diagonal=3",
    "onnx",
    "PASS",
)
